add install info

--- a/dot_config/gnome-terminal/README
+++ b/dot_config/gnome-terminal/README
@@ -1,3 +1,7 @@
-# Gnome Terminal Color Theme
+# Gnome Terminal Nordfox Color Theme
 
-Run ./nordfox.sh
+From within the system terminal (not within a distrobox container) run:
+
+    ./nordfox.sh
+
+The script will create, or update, a profile called Nordfox.
